fix: 인증 정리